--- a/response.Rmd
+++ b/response.Rmd
@@ -3,6 +3,10 @@ title: "Draft response"
 author: "Juan Rocha"
 date: "2023-08-15"
 output:
+    word_document:
+      df_print: paged
+      code_folding: hide
+      toc: false
     html_document:
       theme:
         bootswatch: cosmo
@@ -93,19 +97,31 @@ GC8. About the network analyses, the results seem similar to what would be found
 
 C1. About influence of financial investors. The metrics used (degree and betweenness) are too basic and inadequate. The discretized score ( i.e. = 1 if the investor has shares in the company, etc.) is too coarse. In my view it is necessary to use metrics that take into account the relative weight that each GUO has in each company.
 
-> We agree. Our analysis is not purely binary, most of our networks are weighted. We appreciate your comment and have attempted to clarify the three different types of networks used. We presented degree and betweeneess as descriptive statistics of our data. We can use instead an eigenvector based metric as Vitali or Glattfelder propose. We do however find some problems with their approach. Before explaining the problems, let us clarify the three levels of networks used.
+> We agree. Our analysis is not purely binary, most of our networks are in fact weighted. We appreciate your comment and have attempted to clarify the three different types of networks used. We presented degree and betweeneess as descriptive statistics of our data (on one mode projections). We can use instead an eigenvector based metric as Vitali or Glattfelder propose. We do however find some problems with their approach. Before explaining the problems, let us clarify the three levels of networks used.
 
-> First, our raw data is a bipartite network of companies and shareholders $B_{ij}$. For each link we have direct and total percent of ownership, operational revenue, global ultimate owner, and number of employees. However, the data from Orbis has many missing values. For example, in our raw data of 99 companies, 2310 shareholders, 2041 GUO and 4551 links, % of ownership is missing for 58% of observations and operational revenue for 59%. The amount of missing data limits the applicability of Vitali's approach.
+> First, our raw data is a bipartite network of companies and shareholders $B_{ij}$. For each link we have direct and total percent of ownership, operational revenue, global ultimate owner, and number of employees. However, the data from Orbis has many missing values. For example, in our raw data of 99 companies, 2310 shareholders, 2041 GUO and 4551 links, % of ownership is missing for 58% of observations and operational revenue for 59%. The amount of missing data limits the applicability of Vitali's approach. The matrix $B_{ij}$ is printed below weighted by ownership. Being a directed bipartite matrix, eigenvector based centrality fails because it is directed and acyclic.
 
-> Second, we have one mode networks where companies are connected if they share shareholders (weighted by number of shareholders), and shareholder connected by companies (weighted by number of companies). The third type of network is centered on countries: two countries are connected if a shareholder in country $i$ has an investment on a company operating in country $j$. ERGMs only apply to the third type of network, which is also weighted.
+<img src = "figures/sm_ownership_matrix.png">
+
+> Second, we have one mode networks where companies are connected if they share shareholders (weighted by number of shareholders), and shareholder connected by companies (weighted by number of companies). We can call the one mode networks $A_ij$ for companies, and $S_ij$ for shareholders. The degree and betweenness of the original manuscript was computed on these networks, they are not weighted by ownership, so Vitali's or Glattfelder approaches do not apply.
+
+>The third type of network is centered on countries ($C_ij$): two countries are connected if a shareholder in country $i$ has an investment on a company operating in country $j$. ERGMs only apply to the third type of network, which is also weighted.
 
 I have already pointed to the methodology developed in Vitali ea. 2011. It is not correct that it cannot be used "because it requires the entire network". It could be applied also to a partial network as the authors have here. So please revise that incorrect statement.
 
-> We believe the advantage of Vitali and Glattfelder approaches is that their approximate influence by combining direct ownership with indirect ownership derived from the network. To take advantage of their method, for indirect ownership one needs the indirect pathways from the global untimate owner to the companies at hand. This is not provided by Orbis when looking up individual companies. One would need to recursively walk up the network from the seed company to the GUO and there is no guarantee in any case of recovering all possible paths. We do not have the complete Orbis dataset, we only investigated companies for which we could associate their location and key commodities to places with high risk of EZD. Without the indirect pathways, we cannot take advantage of Vitali's or Glattfelders algorithms. 
+> We believe the advantage of Vitali and Glattfelder approaches is that their approximate influence by combining direct ownership with indirect ownership derived from the network. To take advantage of their method, for indirect ownership one needs the indirect pathways from the global untimate owner to the companies at hand -- at least the shorter path. This is not provided by Orbis when looking up individual companies. One would need to recursively walk up the network from the seed company to the GUO and there is no guarantee in any case of recovering all possible paths. We do not have the complete Orbis dataset, we only investigated companies for which we could associate their location and key commodities to places with high risk of EZD. Without the (shorter) indirect pathways, we cannot take advantage of Vitali's or Glattfelders algorithms. 
 
-> We could try to recursively mine and download the data for all shareholders, but we don't think it will add much to our analysis. It will allow us to estimate Glattfelders influence metric, which uses the shorter paths to account for indirect ownership (avoid double counting and problems reported in the past). But we do not think it is an adequate metric of influence for our research question (expanded below).
+> We could try to recursively mine and download the data for all shareholders, but we don't think it will add much to our analysis. It will allow us to estimate Glattfelders influence metric, which uses the shorter paths to account for indirect ownership (avoid double counting and problems reported in the past). But we do not think it is an adequate metric of influence for our research question. A further explanation is provided below, but a practical reason is missing values.
 
-> We could still estimate the direct portfolio value for each shareholder following eq.5 in their SM, namely multiplying the weighted matrix $W_{ij}$ with the proportion of ownership (with values on the range 0:1) times the operating revenue $v_j$. We find the approach misleading due to missing values of $v_j$ of the Orbis dataset (59% for our sample). So trying to get a sense of the indirect ownership by recursively quering Orbis is unlikely to solve the problem with missing values. For large scale studies like Glattfelder et al, its not problem because they are interested on the emergent features of the network (e.g. bow tie structure or the distribution of ownership or market capitalization); but for a small N study like ours it can be misleading.
+<img src = "figures/fig_reviewer.png">
+
+> We estimated the direct portfolio value for each shareholder following eq.5 in their SM, namely multiplying the weighted matrix $W_{ij}$ with the proportion of ownership (with values on the range 0:1) times the operating revenue $v_j$. We find the approach misleading due to missing values of $v_j$ of the Orbis dataset (59% for our sample). So trying to get a sense of the indirect ownership by recursively quering Orbis is unlikely to solve the problem with missing values. For large scale studies like Glattfelder et al, its not problem because they are interested on the emergent features of the network (e.g. bow tie structure or the distribution of ownership or market capitalization); but for a small N study like ours it can be misleading. It is not discussed in Glattfelder, but if one carefully check their SM, one notices that they do not have either operational revenues for all links, or key variables like market capitalization are only available for 30% or less of the links for the different years they report (and they do have the full data!)
+
+<img src="figures/fig_reviewer2.png">
+
+> We implemented eigenvector based metrics of centrality that take into consideration the weighted structure of the network. We report now power as reported in Glattfelder, and alpha centrality, which is a modified version of the power Bonacich centrality suited for directed and weighted networks.  Thanks very much for the suggestion!
+
+> Bonacich, P. and Lloyd, P. (2001). “Eigenvector-like measures of centrality for asymmetric relations” Social Networks, 23, 191-201.
 
 I can provide two simpler and maybe more intuitive quantities. The authors could use:
 the Control Index defined in Glattfelder ea. 2009 (Eq. 4) which captures the number of companies "effectively controlled" (meant as synonym of "influenced" there) by each investor.
@@ -113,12 +129,16 @@ the Control Index defined in Glattfelder ea. 2009 (Eq. 4) which captures the num
 
 > Thank you for the suggestion and additional references. We find Glattfelder approach useful to map where the money goes. They quantify influece in monetary terms, in their perspective companies with more money are more powerful. For the purpose of their study it is a reasonable assumption; but not for ours. In our study, being able to influence a company by owning some shares means being able to influence their decisions of what to produce, where, and using which practices. Avoiding EZD from a company board perspective means being able to decide whether the soy exported is produced on a deforestation front or a traditional agricultural landscape. Influence in our study happens at the level of company decisions that increase or decrease the risk of EZDs. 
 
+<img src="figures/fig5_key_actors.png">
+
+> 
+
 Alternatively, they could use the notion of "portfolio value" defined in Glattfelder ea. 2019, eq 5 page 10 of Supp. Material.
 In particular, I recommend the authors to address the following empirical questions:
 what is the % of the total market capitalization value of the 54 EID relevant companies that are owned by top 5, 10 most influential investors?
 They could also make distribution or a Lorenz curve (see the Glattefelder 2009; Vitali 2011). This will give an idea of how many investors it takes to convince about the relevance of EID in order to get some action at the company board level.
 
->> to do
+> As explained above, the portfolio value $p_i = \sum_{j \in \Gamma (i)} W_{ij} v_j$ can be misleading due to missing values. We in any case calculated it and reported in a new version of Fig 5.
 
 
 C2. I recommend to provide some additional descriptive statistics of the sample studied. E.g. What is the % of number and market capitalization of the 54 firms relative to the firms in the same regions and sector? What is the % of activities that the 54 firms derive from the activities deemed to lead to EID risk?
@@ -127,37 +147,35 @@ C2. I recommend to provide some additional descriptive statistics of the sample 
 
 C3. Figure 5 A is not very informative. There are no labels and the color code is not very useful (we know the node in the center are those with high degree). Edges are not visible.
 
-> change figure 5
+> We have changed fig 5
 
 C4. Figure 5 B: I suppose "mean ownership" is the average share of one investor across the 54 companies. Instead of showing the mean the figure could show all the values.
 
-> change for distribution of ownership.
+> We included the figure with all values in SM, the bipartite matrix with ownership depicted above.
 
 C5. I am not clear about the likelihood statements obtained with the ERG model. Passage paper page 11 "By combining our data with known indicators of "good governance" from the World Bank, and income inequality metrics (Gini) from the World Inequality database, we note that financial institutions seem to avoid investing in companies operating in countries with high corruption and poor regulatory quality, and that government effectiveness increases the likelihood of investments (Figure 6C)."
 
 I still do not understand the statement exactly. In order to estimate that likelihood I presume one would also need the probability of randomly investing in those countries, based on a given number of links and countries/sectors/firms where these links could be assigned. But the sample only contains the 54 EID sensitive firms. So, I miss what is the null model here.
 
-
-
-> Thanks for your comment, it points out the lack of clarity in our writing. When one fits an exponential random graph model, one compares the observed networks with random networks typically generated with a Monte Carlo approach. The most basic null model is the Erdos-Reny which is equivalent of only fitting the probability of a link at random (the term edge in Fig 6). More sophisticated models are created based on hypotheses or expectations derived from theory......
+> Thanks for your comment, it points out the lack of clarity in our writing. The sample for which there is country data available is 54 companies, 1819 shareholders ($B_ij$ has 1873 nodes), but the network analyzed is on $C_ij$, so we are investigating what features of the countries where shareholder investing, or companies operating affect the likelihood or investing (creating a link). When one fits an exponential random graph model, one compares the observed networks with random networks typically generated with a Monte Carlo approach. The most basic null model is the Erdos-Renyi which is equivalent of only fitting the probability of a link at random (the term edge in Fig 6). More sophisticated models are created based on hypotheses or expectations derived from theory. In sociology for example to study the formation of friendship or conflicts, one often look at closed or open triangles, or transitive triads in the network lingo. But such motifs do not make sense in our investment problem. Previous work suggests that features such as corruption or weak regulatory frameworks can increase the likelihood of foreign investment for industries whose activities relate to resource exploitation. 
 
 C6 Supp info page page 32: The scientific quality of the section 4 is insufficient. I do not understand how to replicate the computations. Examples:
 "Formally, we assess if the probability of link y in the observed network Y depends on a network configuration (η_A) e.g., a link or node level parameter, and gA(y) is one if the network configuration is present, or zero otherwise; compared against random graphs with similar features (A)." I suppose one of the features of the nodes would be the governance? The text is not clear. The definition of "network configuration" is not provided. A link level is certainly not a network configuration.
 "… compared against random graphs with similar features (A). The summation is over all random graphs' statistics and the parameter κ is a normalising parameters that ensure a proper probability distribution" : are these random graph still among the 54 firms? If so, it is not clear to me what null model this gives. I am happy to be convinced that the model allows to assess likelihood to invest in high governance countries, but I at the moment I fail to see why.
 
-
+> Again apologies for the lack of clarity. As mentioned on the response above, the ERGMs were only performed on the third class of networks reported in our paper, namely $C_{ij}$. Code for replication of our computations is available at https://github.com/juanrocha/finance_tipping
 
 C7: Passage: "Four financial institutions (Dimensional, Vanguard, BlackRock, and the Government of Norway) have ownership in >40 companies in total, and in three of the selected case study regions (North America, East Asia and Europe)." I suppose this is in line with a random allocation, just because those financial institutions have shares in thousands of listed firms.
 
-
+> We agree, these large financial actors have a highly diversified portfolio and chances are they will pop up in any case study. We believe a key finding is that we identify their investments that increases EZD, it would be quite easy and unexpensive for them to divest on that "handful" of companies (rather small % of their portfolio) to similar companies wihtout the associated EZD risk. 
 
 C8. Passage "While these patterns of ownership are not surprising and the result of a broader shift in asset management globally (49) …" These patterns are, in general, in line with the findings of 47. Then specifically, regarding the three US funds, in line with 49.
 
-
+>> I didn't understood this comment
 
 C9: "the specific patterns of cross-national ownership depend on the case study region of interest (Figure 4). For example, the importance of investors from Asia and countries like Japan is more prominent in case study regions Southeast Asia compared to Africa and South America." I recommend to expand on this aspect a bit more with some statistics. The charts in Supp Info seem to suggest some regional focus of the investors.
 
-
+>> I believe Paula and Bianca working on this
 
 References:
 
