--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Identifying companies and financial actors exposed to marine tipping points"
 author: |
-    | \small Juan C. Rocha^1^, Jean-Baptiste Jouffray^1^, Paula A. Sánchez^1,2^, Victor Galaz^1^
+    | \small Juan C. Rocha^1^, Jean-Baptiste Jouffray^1^, Frida Bengtsson^1^, Bianca-Ioana Voicu^1^,  Paula A. Sánchez^1,2^, Victor Galaz^1^
     | \footnotesize ^1^Stockholm Resilience Centre, Stockholm University
     | \footnotesize ^2^Germany?
     | \small \texttt{\href{mailto:juan.rocha@su.se}{\nolinkurl{juan.rocha@su.se}}}
@@ -15,7 +15,7 @@ output:
     toc: no
   word_document:
 csl: /Users/juanrocha/Documents/styles/apa.csl
-#bibliography: refs.bib
+bibliography: refs.bib
 citecolor: blue
 documentclass: article
 font: Arial
@@ -35,13 +35,28 @@ header-includes:
 # Notes
 
 - Author order tbd
-- Target journal: Nature family?, GEC, Finance journal? ~ 4000w, 4 figs, 40refs
-- Word budget
-    - Intro: 1000w
-    - Method: 800w
-    - Results: 1000w
-    - Discussion: 800w
-    - Conclusions: 400w
+- Target journal: Nature family?, SciAdv, GEC, Finance journal? ~ 4000w, 4 figs, 40refs
+
+## Outline
+
+- Intro: 1000w
+    -  Marine ecosystems are expected to undergo large biological reorganizations
+    - Exposure to regime shifts are mediated by pressures from climate change, fishing pressure, or pollution.
+    - Companies and financial actors are part of the problem but can also be part of the solutions.
+    - RQ: **Which financial actors are exposed to regime shift risks, and thus have the agency to avoid them or can play a role in navigating transformations?**
+- Method: 800w
+    - Identifying areas prone to regime shifts:
+        - High probability of marine heatwaves
+        - High probability or regime shifts, singals of proximity to tipping points
+    - Identify vessels who fish in these areas
+    - Identify companies who operate these vessels (owners). Identify shareholders who have shares on these companies. Identify global ultimate owners. 
+    - Network statistical models to explore what influence the likelihood of investment.
+- Results: 1000w
+    - The network of ownership and shareholder investments is sparse lacking a backbone or common financial giants
+    - Despite the sparsity of the ownership network, there are important flows of investments across national borders.
+    - Probability of investments: ergms
+- Discussion: 800w
+- Conclusions: 400w
 
 
 \pagebreak
@@ -63,14 +78,18 @@ header-includes:
 
 # Methods
 
+- Identifying areas prone to regime shifts:
+    - High probability of marine heatwaves
+    - High probability or regime shifts, singals of proximity to tipping points
+- Identify vessels who fish in these areas
+- Identify companies who operate these vessels (owners). Identify shareholders who have shares on these companies. Identify global ultimate owners. 
+- Network statistical models to explore what influence the likelihood of investment.
+
 _Case studies:_ To that end, we first identified areas of the oceans exposed to potential regime shifts. Marine heatwaves are expected to increase in frequency and intensity [@Frolicher:2018dc; @Frolicher:2018cm], with stark consequences for the economy of companies, regions and nations depending on the ocean productivity [@Smith_2021]. For example, the Gulf of Alaska experienced a heat anomaly known as the Blob in 2014-2019, impacting a fishery valued at US\$103M / year, with a estimated loss of US\$24.4M, while harmful algae blooms costed US\$40M loss in tourist spending in the coast of Washington in 2015 [@Smith_2021]. Other areas with high vulnerability to heatwaves include the tropical Pacific ocean, the Caribbean sea, the North coasts of Australia, the Eastern China sea and the West Pacific ocean [@Smith_2021]. Proxies of resilience loss in the oceans have been calculated using early warnings to the proximity of tipping points in time series data of primary productivity [@Rocha_2022]. Areas showing strong signals or resilience loss include the Easter Indo-Pacific and the tropical Easter Pacific oceans.
 
 - Maybe a figure Map with the case studies
 
-_Companies_: Based on the geographic exposure to regime shifts, we then identified fishing companies operating in these regions. We used permits and licences issued in Alaska by the National Oceanic and Atmospheric Administration in the United States ([NOAA](https://www.fisheries.noaa.gov/alaska/commercial-fishing/permits-and-licenses-issued-alaska)) to list companies with permits to fish Alaskan pollock, one of the most profitable resources in the region. We used fishing permits issued by the _Servicio nacional de Pesca y Acuicultura_ or the National Fishing and Aquaculture authority of Chile, to companies with the purpose of harvesting anchovies and sardines.
-
-- check with Paula, we should have Peru as well
-- what to do with tuna? we only have O
+_Companies_: Based on the geographic exposure to regime shifts, we then identified fishing companies operating in these regions. 
 
 _Financial actors_: Using the [Orbis](https://login.bvdinfo.com/R0/Orbis) database we extracted the shareholder information for publicly listed companies (names and approximate ratio of ownership), their number of employees, and annual revenues. We complemented the data when possible with information on debt and liquidity from the [Eikon refinitiv](https://eikon.refinitiv.com) database. Unfortunately these data sources are not open access and their terms of service forbids sharing accessed data with third parties. Both of them were accessed through research subscriptions by the home institution.
 
@@ -78,18 +97,27 @@ _Systemic risk exposure_:
 
 # Results
 
+- The network of ownership and shareholder investments is sparse lacking a backbone or common financial giants (SM nets figures).
+    - contrary to previous results of SeaBOS, and financial giants: why? Ownership structure: few owners who own 1/2 or the entirety of the company, many family and small scale businesses. Market conglomeration probably emerge at the level of intermediaries, but from the data, that is not the case for the captains who make decisions on where to fish.
+    - Yet, most vessels are Chinesse, followed by Japan and USA. Most shareholders are based in Norway but they do invest mostly on Norwegian fishing companies. 
 
+- Despite the sparsity of the ownership network, there are important flows of investments across national borders. 
+    - International investments are dominated by Spain, UK and France as countries where investments originate, while Russia is a country who disproportionately receives investments. 
 
 # Discussion
 
+- Contrast to other papers of key stone actors: fisheries does not seem to be highly concentrated, at least not at the level of decisions that expose to risk of regime shifts -- where to go fishing and when.
+
 - Limitation: publicly listed companies, and legal fisheries.
+    - We do not take care of timing: a company can change owners during the time period. We do not control for it because chances are the previous owners reinvest in fishing related activities, there is no way to track investments. 
+
 
 # Conclusion
 
 
 ## Acknowledgements
 
-
+Grants XYZ
 
 # References {.unnumbered}
 
